--- a/packages/demo/views/index.pug
+++ b/packages/demo/views/index.pug
@@ -1,5 +1,8 @@
 html
   head 
+    link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
+    link(href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css", rel="stylesheet")
+    script(src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js")
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet")
 
     style. 
@@ -10,6 +13,11 @@ html
       a {
         display: block;
       }
+    script. 
+      document.addEventListener('DOMContentLoaded', () => {
+
+        mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+      })
 
 
   
@@ -17,3 +25,10 @@ html
     for p in packages 
       a(href=`/${p.shortName}.html`)
         | !{p.name}@!{p.version}
+
+    button.foo-button.mdc-button Button
+    mwc-icon sentiment_very_satisfied
+    mwc-button foo 
+
+
+    script(src="/assets/index.js")
