--- a/packages/demo/views/package-demo.pug
+++ b/packages/demo/views/package-demo.pug
@@ -2,10 +2,26 @@ html
   head 
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet")
 
+    script(src="/assets/index.js")
     style. 
+
+      html, body {
+        margin-left: 0;
+        --mdc-theme-primary: !{pkg.version === 'next' ? 'orange' : '#3f51b5'};
+         /*padding: 0;*/
+      }
 
       * {
         font-family: 'Roboto', sans-serif;
+      }
+      a {
+        display: block;
+      }
+
+      .content{
+        position: relative;
+        top: 50px;
+        padding: 30px;
       }
 
     script(src=`/assets/${name}.js`)
@@ -16,23 +32,25 @@ html
 
         const data = !{JSON.stringify(data)};
 
-        if(!customElements.get('!{tagName}') ){
-          console.warn('!{tagName} is not a custom element')
-        }
+        customElements.whenDefined('!{tagName}').then(() => {
 
-        if(data && data.models){
-          const el = '!{tagName}';
-          data.models.forEach( m => {
-            const n = document.querySelector(`[pie-id="${m.id}"]`); 
-            n.model = m;
-            n.session = {};
-          });
-        } else {
-          console.error('no data?', data);
-        }
+          if(data && data.models){
+            const el = '!{tagName}';
+            data.models.forEach( m => {
+              const n = document.querySelector(`[pie-id="${m.id}"]`); 
+              n.model = m;
+              n.session = {};
+            });
+          } else {
+            console.error('no data?', data);
+          }
+
+        })
       })
   body 
-    h1
-      | @pie-ui/!{name}@!{pkg.version}
+    mwc-top-app-bar(title="foo") 
+      span(slot="title") @pie-ui/!{name}@!{pkg.version}
+      span(slot="title") &nbsp;| !{branch}
+    div.content
     
-    | !{markup}
+      | !{markup}
