--- a/packages/demo/views/index.pug
+++ b/packages/demo/views/index.pug
@@ -1,8 +1,9 @@
 html
   head 
+    meta(charset="utf-8")
     link(rel="stylesheet", href="https://fonts.googleapis.com/icon?family=Material+Icons")
     link(href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css", rel="stylesheet")
-    script(src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js")
+    script(src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js", charset="utf-8")
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet")
 
     style. 
@@ -56,4 +57,4 @@ html
 
         
 
-    script(src="/assets/index.js")
+    script(src="/assets/index.js", charset="utf-8")
