--- a/packages/demo/views/package-demo.pug
+++ b/packages/demo/views/package-demo.pug
@@ -1,8 +1,9 @@
 html
   head 
+    meta(charset="utf-8")
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet")
 
-    script(src="/assets/index.js")
+    script(src="/assets/index.js", charset="utf-8")
     style. 
 
       html, body {
@@ -24,9 +25,9 @@ html
         padding: 30px;
       }
 
-    script(src=`/assets/${name}.js`)
+    script(src=`/assets/${name}.js`, charset="utf-8")
 
-    script(type="text/javascript"). 
+    script(type="text/javascript", charset="utf-8"). 
 
       document.addEventListener("DOMContentLoaded", () => {
 
