--- a/packages/demo/views/package-demo.pug
+++ b/packages/demo/views/package-demo.pug
@@ -1,3 +1,4 @@
+include mixins
 html
   head 
     meta(charset="utf-8")
@@ -49,9 +50,7 @@ html
         })
       })
   body 
-    mwc-top-app-bar(title="foo") 
-      span(slot="title") @pie-ui/!{name}@!{pkg.version}
-      span(slot="title") &nbsp;| !{branch}
+    +top_bar(gitInfo, name, pkg.version)
     div.content
     
       | !{markup}
