feat(match-list): implemented a ui element for the new match-list package

--- a/packages/demo/views/package-demo.pug
+++ b/packages/demo/views/package-demo.pug
@@ -33,11 +33,11 @@ html
       }
 
       .element {
-        flex: 0.5 0 auto;
+        flex: 3;
       }
 
       .changelog-holder {
-        flex: 0 1 auto;
+        flex: 1;
       }
 
     script(src=`/assets/${name}.js`, charset="utf-8")
