--- a/packages/demo/views/package-demo.pug
+++ b/packages/demo/views/package-demo.pug
@@ -33,7 +33,8 @@ html
       }
 
       .element {
-        flex: 3;
+        flex: 2;
+        margin-right: 100px;
       }
 
       .changelog-holder {
@@ -65,7 +66,9 @@ html
             data.models.forEach( m => {
               const n = document.querySelector(`[pie-id="${m.id}"]`); 
               n.model = m;
-              n.session = {};
+              const session = (!{JSON.stringify(session)} || []).find(s => s.id === m.id);
+
+              n.session = session || {};
             });
           } else {
             console.error('no data?', data);
